<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>
    <string name="app_name">카드 가계부</string>

  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_settings">로그인/로그아웃</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_accept">"회원가입 약관
 본 어플은 카드사용에 대한 유용한 팁과 관리를 위해 개설되었습니다.
 어플 설치 후 월간 사용한 금액에 대해 유치한 담당자에게 노출 되는 것에 대해서 동의 하십니까?
(월간 사용한 합산금액에 대해서만 노출되며 사용처는 공개되지 않습니다.)"
    </string>
    <string name="agree">동의</string>
    <!-- Main -->
    <string name="frg_card_management">카드 관리</string>
    <string name="frg_manager_talk">매니저 톡</string>
    <string name="frg_used">통계 관리</string>
    <string name="user_name">사용자 이름 : </string>
    <string name="main_refresh">카드 정보 새로고침</string>
    <string name="main_txt1">월 사용금액 : </string>
    <string name="main_txt2">원</string>

    <string name="main_message1">회원 가입 완료</string>

    <!-- RegistUser -->
    <string name="regist_message1">정확히 입력해 주세요</string>
    <string name="regist_message2">비밀번호가 일치하지 않습니다</string>


    <!-- EmailPassword-->
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <!-- CustomerDatabase -->
    <!-- Cards -->
    <string name="card_shinhan">[신한]</string>
    <string name="card_hyundae">[현대]</string>
    <string name="card_samsung">[삼성]</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 내부 사용 방법-->
    <!-- getResources().getText(R.string.xxx) -->
    <!-- al.add(getResources().getText(R.string.xxx).toString());-->
</resources>
